--- a/index.html
+++ b/index.html
@@ -11,31 +11,44 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/styles.css" />
-
-    <title>Frontend Mentor | Stats preview card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Stats card</title>
   </head>
   <body>
-    Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main class="container">
+      <section class="container-text">
+        <h2 class="container-text-heading">
+          Get <span>insights</span> that help your business grow.
+        </h2>
+        <div class="card">
+          <p class="container-text-description">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="container-stats">
+            <div>
+              <p class="stats-nums">10k+</p>
+              <p class="stats-description">companies</p>
+            </div>
+            <div>
+              <p class="stats-nums">314</p>
+              <p class="stats-description">templates</p>
+            </div>
+            <div>
+              <p class="stats-nums">12M+</p>
+              <p class="stats-description">queries</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container-img">
+        <div></div>
+      </section>
+    </main>
   </body>
 </html>
